--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,9 +9,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
-      run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+    - name: GitHub Action for Maven
+      uses: LucaFeger/action-maven-cli@1.1.0
