--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,6 @@
 name: Java CI
 
-on: [push]
+on: push
 
 jobs:
   build:
@@ -8,12 +8,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Cache
+      uses: actions/cache@v1.1.0
+      
     - uses: actions/checkout@v1
+      
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      
     - name: GitHub Action for Maven
       uses: LucaFeger/action-maven-cli@1.1.0
